# swagger.json
@@ -38,6 +38,15 @@
                 }
             }
         },
+        "/health": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/v1/history": {
             "get": {
                 "description": "List queries",
